--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   "description": "",
   "thumbnailUrl": "http://me.renj.io/favicon.ico",
   "sameAs": [
-      "https://github.com/landers1037", "mailto@liaorenj@gmail.com", "https://stackoverflow.com/users/11940188/landers1037", "https://steamcommunity.com/id/pipi831143", "https://fb.me/landers1037", "https://www.youtube.com/channel/UCAvTanPSk_wl_2V-EpUfJiA", "https://t.me/Greatpipi"
+      "https://github.com/landers1037", "mailto:liaorenj@gmail.com", "https://stackoverflow.com/users/11940188/landers1037", "https://steamcommunity.com/id/pipi831143", "https://fb.me/landers1037", "https://www.youtube.com/channel/UCAvTanPSk_wl_2V-EpUfJiA", "https://t.me/Greatpipi"
   ]
 }
 </script>
@@ -147,7 +147,7 @@
     </path>
 </svg>
     </a>
-    <a href="mailto@liaorenj@gmail.com" target="_blank" rel="noopener noreferrer me" title="Email">
+    <a href="mailto:liaorenj@gmail.com" target="_blank" rel="noopener noreferrer me" title="Email">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 21" fill="none" stroke="currentColor" stroke-width="2"
     stroke-linecap="round" stroke-linejoin="round">
     <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
